; ModuleID = '/home/carl/AnghaBench/vlc/test/libvlc/extr_media_player.c_test_media_player_set_media.c'
source_filename = "/home/carl/AnghaBench/vlc/test/libvlc/extr_media_player.c_test_media_player_set_media.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_default_sample = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [19 x i8] c"Testing set_media\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**, i32)* @test_media_player_set_media to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_media_player_set_media(i8** %0, i32 %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i8** %0, i8*** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load i8*, i8** @test_default_sample, align 8
  store i8* %9, i8** %5, align 8
  %10 = call i32 @test_log(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* %4, align 4
  %12 = load i8**, i8*** %3, align 8
  %13 = call i32* @libvlc_new(i32 %11, i8** %12)
  store i32* %13, i32** %6, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = icmp ne i32* %14, null
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i32*, i32** %6, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = call i32* @libvlc_media_new_path(i32* %18, i8* %19)
  store i32* %20, i32** %7, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = icmp ne i32* %21, null
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert(i32 %23)
  %25 = load i32*, i32** %6, align 8
  %26 = call i32* @libvlc_media_player_new(i32* %25)
  store i32* %26, i32** %8, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = icmp ne i32* %27, null
  %29 = zext i1 %28 to i32
  %30 = call i32 @assert(i32 %29)
  %31 = load i32*, i32** %8, align 8
  %32 = load i32*, i32** %7, align 8
  %33 = call i32 @libvlc_media_player_set_media(i32* %31, i32* %32)
  %34 = load i32*, i32** %7, align 8
  %35 = call i32 @libvlc_media_release(i32* %34)
  %36 = load i32*, i32** %8, align 8
  %37 = call i32 @play_and_wait(i32* %36)
  %38 = load i32*, i32** %8, align 8
  %39 = call i32 @libvlc_media_player_stop_async(i32* %38)
  %40 = load i32*, i32** %8, align 8
  %41 = call i32 @libvlc_media_player_release(i32* %40)
  %42 = load i32*, i32** %6, align 8
  %43 = call i32 @libvlc_release(i32* %42)
  ret void
}

declare dso_local i32 @test_log(i8*) #1

declare dso_local i32* @libvlc_new(i32, i8**) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @libvlc_media_new_path(i32*, i8*) #1

declare dso_local i32* @libvlc_media_player_new(i32*) #1

declare dso_local i32 @libvlc_media_player_set_media(i32*, i32*) #1

declare dso_local i32 @libvlc_media_release(i32*) #1

declare dso_local i32 @play_and_wait(i32*) #1

declare dso_local i32 @libvlc_media_player_stop_async(i32*) #1

declare dso_local i32 @libvlc_media_player_release(i32*) #1

declare dso_local i32 @libvlc_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
